add: function parameters (optional and mandadory) fix: UpdateValue function not working on Cosmos

--- a/Nik300.InterpretLayer/Nik300.InterpretLayer.csproj
+++ b/Nik300.InterpretLayer/Nik300.InterpretLayer.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Types\Statements\Keywords\" />
-    <Folder Include="Types\Statements\Manipulation\" />
     <Folder Include="Types\Statements\Math\" />
+    <Folder Include="Types\Statements\Value\" />
   </ItemGroup>
 
 </Project>
